# evorlhf

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/accelerate_config/: 1gpu_0.yaml  1gpu_1.yaml  1gpu_2.yaml  1gpu_3.yaml  2gpus_ddpg.yaml  2gpus_deepspeed.yaml  3gpus_ddpg.yaml  8gpus_ddpg.yaml  default_config.yaml
configs/cluster/: cscs.yaml  example.yaml
configs/model/: codestral.yaml  granite.yaml  llama32.yaml  phi.yaml  qwensmall.yaml
configs/sweep/: example_eval_sweep_config.csv  example_train_sweep_config.csv  sweep_config_evorlhf.csv  sweep_config_rlhf.csv
configs/task/: bin.yaml  evorlhf.yaml  flatpack.yaml  rlhf.yaml  tsp.yaml
configs/train/: dpo.yaml  none.yaml
data/dataset/: optimal_objs_dict_test_drop_0.0_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  optimal_objs_dict_test_drop_0.2_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  optimal_objs_dict_train_drop_0.0_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  optimal_objs_dict_train_drop_0.2_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  optimal_objs_dict_val_drop_0.0_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  optimal_objs_dict_val_drop_0.2_townsizes_100_200_perturbations_20_20_iterlimits_16_8.pkl  test100_positions.npy  test200_positions.npy  train100_positions.npy  train200_positions.npy  val100_positions.npy  val200_positions.npy
notebooks/: README.md  current_heuristic.txt  reward_hacking.ipynb  rm.ipynb
scripts/: run_eval_sweep_example.sh  run_train_interactive.sh  run_train_sweep_example.sh
(+94 files in other folders)
